--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -36,6 +36,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="/"> <i class="fa fa-home"></i> Home</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/stories/list"> <i class="fa fa-book"></i> Public Stories</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="/auth/login"> <i class="fa fa-sign-in"></i> Login</a>
       </li>
