--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,7 +1,7 @@
-{{!-- 
-<footer ">
+
+<footer class="footer-expand footer-dark bg-info" id="footer">
 <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    Abdelqwy Sayed,Ahmed
+    Abdelqwy Sayed,Ahmed || Email : abdelqwysayed@gmail.com
   </div>
 
-</footer> --}}
+</footer>
