--- a/views/stories/show.handlebars
+++ b/views/stories/show.handlebars
@@ -34,9 +34,13 @@
   </div>
 </div>
 {{else}}
-<p>please <a href="/auth/login">Login</a> to post acomment </p>
+<h6 class="text-center text-danger">please <a href="/auth/login">Login</a> to post acomment !! </h6>
 {{/if}}
   
+</div>
+{{else}}
+<div class="card card-body">
+  <h6 class="text-center text-primary">sorry comments ignored by auther </h6>
 </div>
 {{/if}}
 
