--- a/views/auth/login.handlebars
+++ b/views/auth/login.handlebars
@@ -1,3 +1,10 @@
-<a href="/auth/google" class="btn btn-primary"> <i class="fa fa-google"></i> Login With Google Account</a>
+<div class="row ">
+  <div class="col-md-6 mx-auto" >
+    <div class="card card-body">
+      <a href="/auth/google" class="btn btn-primary mb-3"> <i class="fa fa-google"></i> Login With Google Account</a>
 
 <a href="/auth/facebook" class="btn btn-info"> <i class="fa fa-facebook"></i> Login With Facebook Account</a>
+
+    </div>
+  </div>
+</div>
