--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 <div class="row mt-5">
   <div class="col-md-8 mx-auto">
-    <div class="card card-body">
+    <div >
       <h5 class="text-center"> Welcome to stories website</h5>
       <p>this web site enable you to add public and private stories and share your ideas in diffrent fields in your life especially in programming language </p>
       <p>You can read public stories without loging in ,but if you need to add stories or interact with public stories you must <a href="/auth/login">Login</a> firestly ..Good luck</p>
