--- a/views/stories/show.handlebars
+++ b/views/stories/show.handlebars
@@ -14,7 +14,7 @@
   </div>
  </div>
   {{#if story.allowComments}}
-  <div class="card mt-2 mb-3">
+  <div class="card m-4">
     <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
     Post acomment
   </a>
@@ -45,7 +45,7 @@
 {{/if}}
 
 {{#each story.comments}}
-<div class="card mb-2">
+<div class="card mb-3">
   <div class="card body text-center">
 <h4>{{commentBody}}</h4>
 </div>
@@ -72,3 +72,4 @@
   </div>
 </div> 
   </div>
+</div>
