--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,13 +8,15 @@ body{
 #footer {
   /* flex-shrink: none; */
   clear: both;
-  position: relative;
+  position: static;
+  width: 100%;
   bottom: 0;
-  height: 50px;
-  margin-top: 100%;
+  height: 55px;
+  margin-top:65%;
 
 
 }
+
 
  .chip.chip-md { 
   height: 42px;
